trying to fix data table wrapping

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,6 @@
 body {
-	font-family: 'PT Sans';
-	margin-bottom: 30px;
+    font-family: 'PT Sans';
+    margin-bottom: 30px;
 }
 
 #container {
@@ -165,7 +165,7 @@ body {
 }
 
 #map_large_title {
-    width: 800px;
+    width: 920px;
     text-align: center;
     font-size: 120%;
 }
@@ -194,7 +194,7 @@ body {
     overflow-y: auto;
 }
 
-    .row, .header { clear: left; font-size: 12px; line-height: 18px;}
+    .row, .header { clear: left; font-size: 12px; line-height: 18px; height: 18px; }
     .row:nth-child(odd) { background: rgba(0,0,0,0.05); }
     .header { font-weight: bold; }
     .cell { float: left; overflow: hidden; white-space: nowrap; width: 160px; height: 18px; }
